kubernetes/service/basic.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-service-deployment
  labels:
    app: nginx-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-service
  template:
    metadata:
      labels:
        app: nginx-service
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
