kubernetes/service/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport-service
spec:
  type: NodePort
  selector:
    app: nginx-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
      nodePort: 30000
