kubernetes/service/service-for-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
spec:
  type: NodePort
  selector:
    app: nginx-ingress
  ports:
    - protocol: TCP
      name: nginx-ingress-port
      port: 8082
      targetPort: 80
      nodePort: 30001

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-2-service
spec:
  type: NodePort
  selector:
    app: nginx-ingress-2
  ports:
    - protocol: TCP
      name: nginx-ingress-2-port
      port: 8083
      targetPort: 80
      nodePort: 30002
